--- a/stock_ext/views/stock_quant_views.xml
+++ b/stock_ext/views/stock_quant_views.xml
@@ -8,6 +8,18 @@
         <field name="arch" type="xml">
             <xpath expr="//filter[@name='productgroup']" position="after">
                 <filter string='Product Category' name="product_categ_idgroup" context="{'group_by': 'product_categ_id'}"/>
+                <filter string='Internal Reference' name="product_default_codegroup" context="{'group_by': 'product_default_code'}"/>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="stock_ext.view_stock_quant_tree_inventory_editable" model="ir.ui.view">
+        <field name="name">stock_ext.view_stock_quant_tree_inventory_editable</field>
+        <field name="model">stock.quant</field>
+        <field name="inherit_id" ref="stock.view_stock_quant_tree_inventory_editable"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='product_categ_id']" position="after">
+                <field name="product_default_code" optional="hide"/>
             </xpath>
         </field>
     </record>
