SR-3: Changes the realted fields product_default_code and product_barcode to the product ddependent rather than template dependent, and added the barcode in Stock on hand view, Invnetory reporting

--- a/stock_ext/views/stock_quant_views.xml
+++ b/stock_ext/views/stock_quant_views.xml
@@ -20,6 +20,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_categ_id']" position="after">
                 <field name="product_default_code" optional="hide"/>
+                <field name="product_barcode" optional="hide"/>
             </xpath>
         </field>
     </record>
