SR-3: Added the product_list_price related field to be displayed in Stock On Hand Inventory Report List View

--- a/stock_ext/views/stock_quant_views.xml
+++ b/stock_ext/views/stock_quant_views.xml
@@ -21,6 +21,8 @@
             <xpath expr="//field[@name='product_categ_id']" position="after">
                 <field name="product_default_code" optional="hide"/>
                 <field name="product_barcode" optional="hide"/>
+                <field name="currency_id" invisible="1"/>
+                <field name="product_list_price" widget='monetary' options="{'currency_field': 'currency_id'}" optional="hide"/>
             </xpath>
         </field>
     </record>
