SR-3: Implemented the Computation of Stock Value, Stock Value = Available Quantity    * Product Sales Price to be displayed in Stock on Hand Inventory Report

--- a/stock_ext/views/stock_quant_views.xml
+++ b/stock_ext/views/stock_quant_views.xml
@@ -24,6 +24,9 @@
                 <field name="currency_id" invisible="1"/>
                 <field name="product_list_price" widget='monetary' options="{'currency_field': 'currency_id'}" optional="hide"/>
             </xpath>
+            <xpath expr="//field[@name='available_quantity']" position="after">
+                <field name="stock_value" widget='monetary' options="{'currency_field': 'currency_id'}" optional="hide"/>
+            </xpath>
         </field>
     </record>
 
