--- a/stock_ext/views/stock_quant_views.xml
+++ b/stock_ext/views/stock_quant_views.xml
@@ -18,9 +18,12 @@
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.view_stock_quant_tree_inventory_editable"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='lot_id']" position="replace">
+            </xpath>
             <xpath expr="//field[@name='product_categ_id']" position="after">
                 <field name="product_default_code" optional="hide"/>
                 <field name="product_barcode" optional="hide"/>
+                <field name="lot_id" optional="hide"/>
                 <field name="currency_id" invisible="1"/>
                 <field name="product_list_price" widget='monetary' options="{'currency_field': 'currency_id'}" optional="hide"/>
             </xpath>
