--- a/mundolotes_acl/views/res_users_views.xml
+++ b/mundolotes_acl/views/res_users_views.xml
@@ -10,7 +10,7 @@
                     <page name="mundolotes_acl" string="Mundolotes Access Management">
                         <group name="stock" string="Inventory">
                             <group name="row1_left">
-                                <field name="warehouse_ids" widget="many2many_tags" options="{'no_create': True}"/>
+                                <field name="allowed_warehouse_ids" widget="many2many_tags" options="{'no_create': True}"/>
                             </group>
                         </group>
                     </page>
@@ -25,7 +25,7 @@
         <field name="inherit_id" ref="base.view_users_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='login']" position="after">
-                <field name="warehouse_ids" widget="many2many_tags" optional="show"/>
+                <field name="allowed_warehouse_ids" widget="many2many_tags" optional="show"/>
             </xpath>
         </field>
     </record>
