--- a/stock_ext/views/stock_move_views.xml
+++ b/stock_ext/views/stock_move_views.xml
@@ -8,6 +8,8 @@
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="product_categ_id" optional="hide"/>
                 <field name="product_id_default_code" optional="hide"/>
+                <field name="currency_id" invisible="1"/>
+                <field name="product_list_price" widget='monetary' options="{'currency_field': 'currency_id'}" optional="hide"/>
             </xpath>
         </field>
     </record>
