--- a/stock_ext/views/stock_move_views.xml
+++ b/stock_ext/views/stock_move_views.xml
@@ -11,6 +11,10 @@
                 <field name="currency_id" invisible="1"/>
                 <field name="product_list_price" widget='monetary' options="{'currency_field': 'currency_id'}" optional="hide"/>
             </xpath>
+            <xpath expr="//field[@name='qty_done']" position="after">
+                <field name="currency_id" invisible="1"/>
+                <field name="qty_done_amount" widget='monetary' options="{'currency_field': 'currency_id'}" optional="hide"/>
+            </xpath>
         </field>
     </record>
 </odoo>
