--- a/stock_ext/report/report_deliveryslip_summarized.xml
+++ b/stock_ext/report/report_deliveryslip_summarized.xml
@@ -73,28 +73,28 @@
                                 <tbody>
 
                                     <tr style="">
-                                        <td style="width:25%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
+                                        <td style="width:40%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
                                             <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                 <tr style="">
-                                                    <td style="width:40%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 0px 0px 20px;">
+                                                    <td style="width:100%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 0px 0px 20px;">
                                                         Category
                                                     </td>
                                                 </tr>
                                             </table>
                                         </td>
-                                        <td style="width:75%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                        <td style="width:60%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
                                             <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                 <tr style="">
-                                                    <td style="width:40%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                                    <td style="width:55%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                         Internal Reference
                                                     </td>
                                                     <td style="width:15%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 0px 0px 0px;">
-                                                        LOT (Count)
+                                                        LOT
                                                     </td>
-                                                    <td style="width:25%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 0px 0px 0px;">
-                                                        Sum Of Done (Qty)
+                                                    <td style="width:15%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                                        Qty
                                                     </td>
-                                                    <td style="width:20%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 20px 0px 0px;">
+                                                    <td style="width:15%; background-color: #fabc75; font-weight: bold; border:0px solid #000; padding:0px 20px 0px 0px;">
                                                         Amount
                                                     </td>
                                                 </tr>
@@ -108,29 +108,29 @@
 
                                     <t t-foreach="category_dicts" t-as="category_dict">
                                         <tr style="">
-                                            <td style="width:25%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
+                                            <td style="width:40%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
                                                 <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                     <tr style="">
-                                                        <td style="width:40%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 20px;">
+                                                        <td style="width:100%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 20px;">
                                                             <t t-esc="category_dict"/>
                                                         </td>
                                                     </tr>
                                                 </table>
                                             </td>
-                                            <td style="width:75%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                            <td style="width:60%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                 <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                     <t t-foreach="category_dict_value['internal_reference_dicts']" t-as="internal_reference_dict">
                                                         <tr style="">
-                                                            <td style="width:40%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                                            <td style="width:55%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                                 <t t-esc="internal_reference_dict['product_id_default_code']"/>
                                                             </td>
                                                             <td style="width:15%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
                                                                 <t t-esc="internal_reference_dict['count_lot_id']"/>
                                                             </td>
-                                                            <td style="width:25%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
+                                                            <td style="width:15%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
                                                                 <t t-esc="internal_reference_dict['sum_qty_done']" t-options='{"widget": "float", "precision": 2}'/>
                                                             </td>
-                                                            <td style="width:20%; background-color: #fff; border:0px solid #000; padding:0px 20px 0px 0px; text-align:right;">
+                                                            <td style="width:15%; background-color: #fff; border:0px solid #000; padding:0px 20px 0px 0px; text-align:right;">
                                                                 <t t-esc="internal_reference_dict['sum_qty_done_amount']"  t-options="{'widget': 'monetary', 'display_currency': o.move_line_ids_without_package.currency_id}"/>
                                                             </td>
                                                         </tr>
@@ -139,29 +139,29 @@
                                             </td>
                                         </tr>
                                         <tr style="">
-                                            <td style="width:25%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
+                                            <td style="width:40%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
                                                 <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                     <tr style="">
-                                                        <td style="width:40%; background-color: #DDD; border:0px solid #000; padding:0px 0px 0px 20px;">
+                                                        <td style="width:100%; background-color: #DDD; border:0px solid #000; padding:0px 0px 0px 20px;">
                                                             <t t-esc="category_dict + ' Total'"/>
                                                         </td>
                                                     </tr>
                                                 </table>
                                             </td>
-                                            <td style="width:75%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                            <td style="width:60%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                 <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
 
                                                         <tr style="">
-                                                            <td style="width:40%; background-color: #DDD; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                                            <td style="width:55%; background-color: #DDD; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                                 
                                                             </td>
                                                             <td style="width:15%; background-color: #DDD; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
                                                                 <t t-esc="category_dict_value['category_count_lot_id']"/>
                                                             </td>
-                                                            <td style="width:25%; background-color: #DDD; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
+                                                            <td style="width:15%; background-color: #DDD; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
                                                                 <t t-esc="category_dict_value['category_sum_qty_done']" t-options='{"widget": "float", "precision": 2}'/>
                                                             </td>
-                                                            <td style="width:20%; background-color: #DDD; border:0px solid #000; padding:0px 20px 0px 0px; text-align:right;">
+                                                            <td style="width:15%; background-color: #DDD; border:0px solid #000; padding:0px 20px 0px 0px; text-align:right;">
                                                                 <t t-esc="category_dict_value['category_sum_qty_done_amount']" t-options="{'widget': 'monetary', 'display_currency': o.move_line_ids_without_package.currency_id}"/>
                                                             </td>
                                                         </tr>
@@ -177,34 +177,33 @@
                                     </t>
 
                                     <tr>
-                                        <td style="width:25%; height:1px; background-color: #fff; border:1px solid #000; padding:0px 0px 0px 0px; vertical-align: top;"></td>
-                                        <td style="width:75%; height:1px; background-color: #fff; border:1px solid #000; padding:0px 0px 0px 0px;"></td>
+                                        <td style="width:40%; height:1px; background-color: #fff; border:1px solid #000; padding:0px 0px 0px 0px; vertical-align: top;"></td>
+                                        <td style="width:60%; height:1px; background-color: #fff; border:1px solid #000; padding:0px 0px 0px 0px;"></td>
                                     </tr>
 
                                     <tr style="">
-                                        <td style="width:25%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
+                                        <td style="width:40%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px; vertical-align: top;">
                                             <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
                                                 <tr style="">
-                                                    <td style="width:40%; background-color: #fff0e1; border:0px solid #000; padding:0px 0px 0px 20px;">
+                                                    <td style="width:100%; background-color: #fff0e1; border:0px solid #000; padding:0px 0px 0px 20px;">
                                                         Grand Total
                                                     </td>
                                                 </tr>
                                             </table>
                                         </td>
-                                        <td style="width:75%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                        <td style="width:60%; background-color: #fff; border:0px solid #000; padding:0px 0px 0px 0px;">
                                             <table style="width:100%; border:0px solid #000; padding:0px 0px 0px 0px;">
-
                                                     <tr style="">
-                                                        <td style="width:40%; background-color: #fff0e1; border:0px solid #000; padding:0px 0px 0px 0px;">
-                                                            
+                                                        <td style="width:55%; background-color: #fff0e1; border:0px solid #000; padding:0px 0px 0px 0px;">
+                                                            <span> </span>
                                                         </td>
                                                         <td style="width:15%; background-color: #fff0e1; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
                                                             <t t-esc="grand_total_lot_count"/>
                                                         </td>
-                                                        <td style="width:25%; background-color: #fff0e1; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
+                                                        <td style="width:15%; background-color: #fff0e1; border:0px solid #000; padding:0px 0px 0px 0px; text-align:right;">
                                                             <t t-esc="grand_total_qty_done" t-options='{"widget": "float", "precision": 2}'/>
                                                         </td>
-                                                        <td style="width:20%; background-color: #fff0e1; border:0px solid #000; padding:0px 20px 0px 0px; text-align:right;">
+                                                        <td style="width:15%; background-color: #fff0e1; border:0px solid #000; padding:0px 20px 0px 0px; text-align:right;">
                                                             <t t-esc="grand_total_amount" t-options="{'widget': 'monetary', 'display_currency': o.move_line_ids_without_package.currency_id}"/>
                                                         </td>
                                                     </tr>
