--- a/advanced_pos_reports/views/report_pos_posted_session.xml
+++ b/advanced_pos_reports/views/report_pos_posted_session.xml
@@ -171,6 +171,8 @@
                                                  <t t-esc="message_id.body"/>
                                             </td>
                                           </tr>
+                                         "Firma Cajero                              Firma Supervisor"
+                                         "___________________                       ______________________"
                                      </t>
                                  </t>
                             </t>
