--- a/advanced_pos_reports/views/report_pos_posted_session.xml
+++ b/advanced_pos_reports/views/report_pos_posted_session.xml
@@ -161,6 +161,10 @@
                             </t>
                         </tbody>
                     </table>
+                    
+                                        <center>
+                        <h3>Notas</h3>
+                    </center>
 
 <!--                    <p style="page-break-after:always;"/>-->
 
